fixed the absolute positioning on mobile

--- a/src/styles/summary.scss
+++ b/src/styles/summary.scss
@@ -275,6 +275,7 @@
       padding: 40px 57px;
       padding-top: 24px;
       border-radius: 0px 0px 32px 32px;
+      position: relative;
     }
   }
 
@@ -427,8 +428,8 @@
 
     @media screen and (max-width: 740px) {
       left: 0;
-      justify-content: end;
       align-items: center;
+      position: relative;
     }
   }
 
@@ -436,5 +437,8 @@
     border-radius: 0;
     width: 100%;
     height: 100%;
+
+    display: flex;
+    flex-direction: column-reverse;
   }
 }
